Add example terms of the sequence

--- a/results.tex
+++ b/results.tex
@@ -36,8 +36,11 @@ to show that $g(n)$ satifies the recurrence
     g(4n + 2) &= 2 g(4n) - g(2n).
 \end{align*}
 This will identify the sequence $a(n) = g(2n)$ as the
-\emph{Narayana--Zidek--Capell numbers}, A2083 in the OEIS. This recurrence was
-discovered thanks to the OEIS.
+\emph{Narayana--Zidek--Capell numbers}, A2083 in the OEIS, which begin
+\begin{equation*}
+    1, 1, 1, 2, 3, 6, 11, 22, 42, 84, 165, 330, 654, \dots
+\end{equation*}
+This recurrence was discovered thanks to the OEIS.
 
 Our first definition discusses \emph{finite} binary strings, but it is more
 convenient to work with \emph{infinite} binary strings which are nonzero in
