Fix the S_k sets

--- a/results.tex
+++ b/results.tex
@@ -195,10 +195,9 @@ compute the following sets:
 \begin{align*}
     S_1 &= [0, 1/2) \\
     S_2 &= [1/2, 3/4) \\
-    S_3 &= \emptyset \\
-    S_4 &= [0, 1/2) \\
-    S_5 &= \emptyset \\
-    S_6 &= [13/16, 14/16) \cup [15/16, 1)\\
+    S_4 &= [3/4, 13/16) \\
+    S_6 &= [7/8, 57/64) \\
+    S_8 = [13/16, 209/256) &\cup [15/16, 241/256).
 \end{align*}
 
 [Insert the stopping time plot somewhere around here.]
